--- a/package/Config.in
+++ b/package/Config.in
@@ -2239,6 +2239,7 @@ endif
 	source "package/iptraf-ng/Config.in"
 	source "package/iputils/Config.in"
 	source "package/irssi/Config.in"
+	source "package/irssi-git/Config.in"
 	source "package/iw/Config.in"
 	source "package/iwd/Config.in"
 	source "package/janus-gateway/Config.in"
